syntax = "proto3";

package model;

option go_package = "github.com/user/repo/proto/model";

// CardType 定义玩家可以打出的卡牌类型。
enum CardType {
  CARD_TYPE_UNSPECIFIED = 0;
  CARD_TYPE_MOVEMENT = 1;
  CARD_TYPE_PARANOIA = 2;
  CARD_TYPE_GOODWILL = 3;
  CARD_TYPE_INTRIGUE = 4;
  CARD_TYPE_SPECIAL = 5;
}

// PlayerRole 定义连接玩家的角色（人类或 LLM）。
enum PlayerRole {
  PLAYER_ROLE_UNSPECIFIED = 0;
  PLAYER_ROLE_MASTERMIND = 1;
  PLAYER_ROLE_PROTAGONIST = 2;
}

// GamePhase 定义游戏日期的当前阶段。
enum GamePhase {
  GAME_PHASE_UNSPECIFIED = 0;
  GAME_PHASE_MORNING = 1;
  GAME_PHASE_CARD_PLAY = 2;
  GAME_PHASE_CARD_REVEAL = 3;
  GAME_PHASE_CARD_RESOLVE = 4;
  GAME_PHASE_ABILITIES = 5;
  GAME_PHASE_INCIDENTS = 6;
  GAME_PHASE_DAY_END = 7;
  GAME_PHASE_LOOP_END = 8;
  GAME_PHASE_GAME_OVER = 9;
  GAME_PHASE_PROTAGONIST_GUESS = 10;
}

// GameEventType for GameEvent
enum GameEventType {
  GAME_EVENT_TYPE_UNSPECIFIED = 0;
  GAME_EVENT_TYPE_CARD_PLAYED = 1;
  GAME_EVENT_TYPE_CHARACTER_MOVED = 2;
  GAME_EVENT_TYPE_PARANOIA_ADJUSTED = 3;
  GAME_EVENT_TYPE_GOODWILL_ADJUSTED = 4;
  GAME_EVENT_TYPE_INTRIGUE_ADJUSTED = 5;
  GAME_EVENT_TYPE_ABILITY_USED = 6;
  GAME_EVENT_TYPE_TRAGEDY_TRIGGERED = 7;
  GAME_EVENT_TYPE_TRAGEDY_PREVENTED = 8;
  GAME_EVENT_TYPE_DAY_ADVANCED = 9;
  GAME_EVENT_TYPE_LOOP_RESET = 10;
  GAME_EVENT_TYPE_GAME_OVER = 11;
  GAME_EVENT_TYPE_PLAYER_GUESS = 12;
}

// ActionType 定义了玩家可以执行的操作类型。
enum ActionType {
  ACTION_TYPE_UNSPECIFIED = 0;
  ACTION_TYPE_PLAY_CARD = 1;
  ACTION_TYPE_USE_ABILITY = 2;
  ACTION_TYPE_MAKE_GUESS = 3;
  ACTION_TYPE_READY_FOR_NEXT_PHASE = 4;
}

// RoleType 定义了玩家在游戏中的具体角色。
enum RoleType {
  ROLE_TYPE_UNSPECIFIED = 0;
  ROLE_TYPE_INNOCENT = 1;
  ROLE_TYPE_KILLER = 2;
  ROLE_TYPE_BRAIN = 3;
  ROLE_TYPE_KEY_PERSON = 4;
  ROLE_TYPE_FRIEND = 5;
  ROLE_TYPE_CONSPIRACY_THEORIST = 6;
  ROLE_TYPE_CULTIST = 7;
  ROLE_TYPE_MASTERMIND = 8;
  ROLE_TYPE_PROTAGONIST = 9;
}

// TragedyType 定义了剧本中可能发生的悲剧类型。
enum TragedyType {
  TRAGEDY_TYPE_UNSPECIFIED = 0;
  TRAGEDY_TYPE_A = 1;
  TRAGEDY_TYPE_B = 2;
  TRAGEDY_TYPE_C = 3;
  TRAGEDY_TYPE_D = 4;
}

// AbilityTriggerType 定义能力何时可以被触发。
enum AbilityTriggerType {
  ABILITY_TRIGGER_TYPE_UNSPECIFIED = 0;
  ABILITY_TRIGGER_TYPE_DAY_START = 1;
  ABILITY_TRIGGER_TYPE_MASTERMIND_PHASE = 2;
  ABILITY_TRIGGER_TYPE_GOODWILL_PHASE = 3;
  ABILITY_TRIGGER_TYPE_PASSIVE = 4;
}

// EffectType 定义能力或卡牌可能产生的效果类型。
// 这是组合方法的核心。
enum EffectType {
  EFFECT_TYPE_UNSPECIFIED = 0;
  EFFECT_TYPE_MOVE_CHARACTER = 1;
  EFFECT_TYPE_ADJUST_PARANOIA = 2;
  EFFECT_TYPE_ADJUST_GOODWILL = 3;
  EFFECT_TYPE_ADJUST_INTRIGUE = 4;
  EFFECT_TYPE_REVEAL_ROLE = 5;
  EFFECT_TYPE_PREVENT_TRAGEDY = 6;
  EFFECT_TYPE_GRANT_ABILITY = 7;
  EFFECT_TYPE_CHECK_LOCATION_ALONE = 8;
  EFFECT_TYPE_CHECK_CHARACTER_STATUS = 9;
}

// TargetRuleType 定义悲剧如何选择目标角色。
enum TargetRuleType {
  TARGET_RULE_TYPE_UNSPECIFIED = 0;
  TARGET_RULE_TYPE_SPECIFIC_CHARACTER = 1;
  TARGET_RULE_TYPE_ANY_CHARACTER_AT_LOCATION = 2;
}