syntax = "proto3";

package tragedylooper.v1;

option go_package = "github.com/constellation39/tragedyLooper/pkg/proto/v1";

// 玩家角色
enum PlayerRole {
  PLAYER_ROLE_UNSPECIFIED = 0; // 未指定
  PLAYER_ROLE_MASTERMIND = 1; // 主谋
  PLAYER_ROLE_PROTAGONIST = 2; // 主角
}

// 游戏阶段
enum GamePhase {
  GAME_PHASE_UNSPECIFIED = 0; // 未指定
  GAME_PHASE_SETUP = 1; // 游戏设置阶段
  GAME_PHASE_MASTERMIND_SETUP = 2; // 主谋设置阶段
  GAME_PHASE_LOOP_START = 3; // 循环开始阶段
  GAME_PHASE_DAY_START = 4; // 日开始阶段
  GAME_PHASE_MASTERMIND_CARD_PLAY = 5; // 主谋出牌阶段
  GAME_PHASE_PROTAGONIST_CARD_PLAY = 6; // 主角出牌阶段
  GAME_PHASE_CARD_REVEAL = 7; // 卡牌揭示阶段
  GAME_PHASE_CARD_RESOLVE = 8; // 卡牌结算阶段
  GAME_PHASE_MASTERMIND_ABILITIES = 9; // 主谋能力阶段
  GAME_PHASE_PROTAGONIST_ABILITIES = 10; // 主角能力阶段
  GAME_PHASE_INCIDENTS = 11; // 事件结算阶段
  GAME_PHASE_DAY_END = 12; // 日结束阶段
  GAME_PHASE_LOOP_END = 13; // 循环结束阶段
  GAME_PHASE_PROTAGONIST_GUESS = 14; // 主角推理阶段
  GAME_PHASE_GAME_OVER = 15; // 游戏结束阶段
}

// 卡牌类型
enum CardType {
  CARD_TYPE_UNSPECIFIED = 0; // 未指定
  CARD_TYPE_MOVE_HORIZONTALLY = 1; // 水平移动
  CARD_TYPE_PARANOIA_PLUS = 2; // 增加妄想
  CARD_TYPE_PARANOIA_MINUS = 3; // 减少妄想
  CARD_TYPE_GOODWILL_PLUS = 4; // 增加好感
  CARD_TYPE_GOODWILL_MINUS = 5; // 减少好感
  CARD_TYPE_INTRIGUE_PLUS = 6; // 增加阴谋
  CARD_TYPE_FORBID_MOVEMENT = 7; // 禁止移动
  CARD_TYPE_FORBID_PARANOIA_INCREASE = 8; // 禁止妄想增加
  CARD_TYPE_FORBID_GOODWILL_INCREASE = 9; // 禁止好感增加
  CARD_TYPE_FORBID_INTRIGUE_INCREASE = 10; // 禁止阴谋增加
  CARD_TYPE_MOVE_VERTICALLY = 11; // 垂直移动
  CARD_TYPE_MOVE_DIAGONALLY = 12; // 对角移动
}

// 剧本难度
enum ScriptDifficulty {
  SCRIPT_DIFFICULTY_UNSPECIFIED = 0; // 未指定
  SCRIPT_DIFFICULTY_EASY = 1; // 简单
  SCRIPT_DIFFICULTY_NORMAL = 2; // 普通
  SCRIPT_DIFFICULTY_HARD = 3; // 困难
  SCRIPT_DIFFICULTY_EXPERT = 4; // 专家
}

// 剧情类型
enum PlotType {
  PLOT_TYPE_UNSPECIFIED = 0; // 未指定
  PLOT_TYPE_MAIN_PLOT = 1; // 主线剧情
  PLOT_TYPE_SUB_PLOT = 2; // 支线剧情
}

// 地点类型（也可通过LocationConfig扩展）
enum LocationType {
  LOCATION_TYPE_UNSPECIFIED = 0; // 未指定
  LOCATION_TYPE_HOSPITAL = 1; // 医院
  LOCATION_TYPE_SHRINE = 2; // 神社
  LOCATION_TYPE_CITY = 3; // 城市
  LOCATION_TYPE_SCHOOL = 4; // 学校
  // 可根据具体剧本扩展
}

// 触发器类型（能力或规则何时触发）
enum TriggerType {
  TRIGGER_TYPE_UNSPECIFIED = 0; // 未指定
  TRIGGER_TYPE_ON_GAME_SETUP = 1; // 游戏设置时
  TRIGGER_TYPE_ON_LOOP_START = 2; // 循环开始时
  TRIGGER_TYPE_ON_DAY_START = 3; // 每天开始时
  TRIGGER_TYPE_ON_PHASE_START = 4; // 特定阶段开始时（需配合GamePhase）
  TRIGGER_TYPE_ON_PHASE_END = 5; // 特定阶段结束时（需配合GamePhase）
  TRIGGER_TYPE_ON_GAME_EVENT = 6; // 发生特定游戏事件时
  TRIGGER_TYPE_ON_PASSIVE = 7; // 被动（条件满足时持续生效）
  TRIGGER_TYPE_ON_GUESS_MADE = 8; // 推理发生时
  TRIGGER_TYPE_ON_GAME_END = 9; // 游戏结束时
  TRIGGER_TYPE_ON_DAY_END = 10; // 每日结束时
  TRIGGER_TYPE_ON_LOOP_END = 11; // 循环结束时
}

// 游戏事件类型（用于能力触发器过滤）
enum GameEventType {
  GAME_EVENT_TYPE_UNSPECIFIED = 0; // 未指定
  GAME_EVENT_TYPE_CHARACTER_MOVED = 1; // 角色移动事件
  GAME_EVENT_TYPE_PARANOIA_ADJUSTED = 2; // 妄想值调整事件
  GAME_EVENT_TYPE_GOODWILL_ADJUSTED = 3; // 好感值调整事件
  GAME_EVENT_TYPE_INTRIGUE_ADJUSTED = 4; // 阴谋值调整事件
  GAME_EVENT_TYPE_INCIDENT_TRIGGERED = 5; // 悲剧触发事件
  GAME_EVENT_TYPE_INCIDENT_PREVENTED = 6; // 悲剧阻止事件
  GAME_EVENT_TYPE_ROLE_REVEALED = 7; // 角色身份揭示事件
  GAME_EVENT_TYPE_ABILITY_GRANTED = 8; // 授予能力事件
  GAME_EVENT_TYPE_CHOICE_REQUIRED = 9; // 需要玩家选择事件
  GAME_EVENT_TYPE_LOOP_WIN = 10; // 循环胜利事件
  GAME_EVENT_TYPE_LOOP_LOSS = 11; // 循环失败事件
  GAME_EVENT_TYPE_FIRST_GUESS_MADE = 12; // 首次猜测事件
  GAME_EVENT_TYPE_FINAL_GUESS_MADE = 13; // 最终猜测事件
  GAME_EVENT_TYPE_GOODWILL_REFUSAL_TEST = 14; // 好感度拒绝测试事件
  GAME_EVENT_TYPE_LOOP_OVER = 15; // 循环结束事件
  GAME_EVENT_TYPE_DAY_ADVANCED = 16; // 天数推进事件
  GAME_EVENT_TYPE_TRAGEDY_TRIGGERED = 17; // 悲剧触发事件
  GAME_EVENT_TYPE_LOOP_RESET = 18; // 循环重置事件
  GAME_EVENT_TYPE_TRAIT_ADDED = 19; // 特性添加事件
  GAME_EVENT_TYPE_TRAIT_REMOVED = 20; // 特性移除事件
  GAME_EVENT_TYPE_CARD_PLAYED = 21; // 卡牌打出事件
  GAME_EVENT_TYPE_CARD_REVEALED = 22; // 卡牌揭示事件
  GAME_EVENT_TYPE_GAME_ENDED = 23; // 游戏结束事件
  GAME_EVENT_TYPE_PLAYER_ACTION = 24; // 玩家行动事件
}

// StatType defines the type of character stat.
enum StatType {
  STAT_TYPE_UNSPECIFIED = 0;
  STAT_TYPE_PARANOIA = 1;
  STAT_TYPE_GOODWILL = 2;
  STAT_TYPE_INTRIGUE = 3;
}
