syntax = "proto3";

package v1;

import "v1/effect.proto";
import "v1/enums.proto";

option go_package = "tragedylooper/internal/game/v1;v1";

// CardConfig represents the static configuration of a card.
message CardConfig {
  int32 id = 1; // Unique ID for the card configuration
  string name = 2; // Name of the card
  CardType card_type = 3; // Type of the card
  PlayerRole owner_role = 4; // The player role this card belongs to (Mastermind or Protagonist)
  Effect effect = 5; // The effect of the card
  bool once_per_loop = 6; // Whether the card can be used only once per loop
}

// Card represents a runtime instance of a card.
message Card {
  int32 id = 1; // The ID of the card, linking to a CardConfig
  bool used_this_loop = 2; // Runtime state: whether this card has been used in the current loop
}

// CardConfigLib holds a library of card configurations.
message CardConfigLib {
  map<int32, CardConfig> cards = 1;
}

// CardList holds a list of card instances.
message CardList {
  repeated Card cards = 1;
}
